<resources>
    <string name="app_name">syrus_media_mobile</string>
    <string name="input_confirm_password">Input Confirm Password</string>
    <string name="input_password">Input Password</string>
    <string name="input_email">Input Email</string>
    <string name="input_phone_number">Input Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_title">Sign Up 📝</string>
    <string name="input_username">Input Username</string>
    <string name="log_in">Log In</string>
    <string name="syrus_media_title">Syrus Media 📼</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="group">Group</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>